--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body{
 
 #section {
     width: 80%;
-    height: 100vh;
+    min-height: 100vh;
     border: 1px solid green;
     background-color: #fafafa;
 }
