--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
 
 body{
     min-height: 98vh;
+    font-family: Montserrat, sans-serif;
     background: linear-gradient(
         15deg,
         hsl(0deg 88% 44%) 0%,
@@ -26,6 +27,10 @@ body{
         hsl(46deg 100% 50%) 93%,
         hsl(49deg 100% 50%) 100%
       );
+}
+
+.h1 {
+    font-family: "Rock Salt", sans-serif;
 }
 
 #section {
