--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 
 body{
     min-height: 98vh;
-    font-family: Montserrat, sans-serif, monospace;
+    font-family: Montserrat, monospace, sans-serif;
     background: linear-gradient(
         15deg,
         hsl(0deg 88% 44%) 0%,
