--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body{
 }
 
 .h1 {
-    font-family: "Rock Salt", Helvetica, sans-serif;
+    font-family: "Rock Salt", Helvetica, monospace, sans-serif;
 }
 
 #section {
